# ohr

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg
ohr/: asgi.py  settings.py  urls.py  wsgi.py
ohr/apps/core/: adapter.py  apps.py  constants.py  models.py  views.py
ohr/apps/repo/: apps.py  models.py  urls.py  views.py
ohr/apps/repo/migrations/: 0001_initial.py
ohr/apps/users/: __init__.py  apps.py  forms.py  models.py  signals.py  tests.py  utils.py
ohr/apps/users/migrations/: 0001_initial.py  0002_userprofile_data.py
templates/: home.html  sidebar.html
templates/account/: base.html  login.html  signup.html
templates/documents/: list.html
templates/vega_admin/badmin/: base.html  read.html
