[tool.poetry]
name = "ohr"
version = "0.1.0"
description = "Oral Health Document Repository"
authors = ["Kelvin Jayanoris <kjayanoris@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.2"
django-allauth = "^0.41.0"
whitenoise = "^5.0.1"
django_compressor = "^2.4"
psycopg2-binary = "^2.8.4"
django-vega-admin = "^0.0.17"
django-private-storage = "^2.2.2"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.1"
django-extensions = "^2.2.6"
pydocstyle = "^5.0.2"
pycodestyle = "^2.5.0"
pylint = "^2.4.4"
pylint-django = "^2.0.13"
tox = "^3.14.3"
flake8 = "^3.7.9"
pep8 = "^1.7.1"
autopep8 = "^1.4.4"
coverage = "^5.0.3"
yapf = "^0.29.0"
isort = "^4.3.21"
ipdb = "^0.12.3"
model_mommy = "^2.0.0"
black = "^19.10b0"
pre-commit = "^1.21.0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
